[Fixed Parallax resolution overflow:hidden]

--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -81,10 +81,11 @@ body {
 /* Parallax Home */
 .parallax {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    width: 100%;
+
     height: 100vh;
+    overflow: hidden;
 }
 
 @media (max-width: 770px) {
